# stunning-adventure

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/config/: gnu+linux-gcc-clang.cmake  win-vs.cmake
include/SA/: Application.hpp  Lcounter.hpp  Statistics.hpp  Timer.hpp  lineCounter.hpp  sa.h  stats.hpp  wordCounter.hpp
src/SA/: main.cpp
src/test/: main.cpp
